Fix support scrollbars + TicketModal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,68 @@ body {
   margin-bottom: 13px;
 }
 
+.custom-scrollbar-left-spacing {
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding-right: 15px;
+  margin-right: -15px;
+  box-sizing: content-box;
+}
+
+.custom-scrollbar-left-spacing::-webkit-scrollbar {
+  width: 10px;
+}
+
+.custom-scrollbar-left-spacing::-webkit-scrollbar-thumb {
+  background-color: #c0c0c0;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+
+.custom-scrollbar-left-spacing::-webkit-scrollbar-thumb:hover {
+  background-color: #a0a0a0;
+}
+
+.custom-scrollbar-left-spacing::-webkit-scrollbar-track {
+  background-color: transparent;
+  margin-top: 13px;
+  margin-bottom: 13px;
+}
+
+
+
+.custom-scrollbar-modal {
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding-right: 15px;
+  margin-right: -15px;
+  box-sizing: content-box;
+}
+
+.custom-scrollbar-modal::-webkit-scrollbar {
+  width: 10px;
+}
+
+.custom-scrollbar-modal::-webkit-scrollbar-thumb {
+  background-color: #c0c0c0;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+
+.custom-scrollbar-modal::-webkit-scrollbar-thumb:hover {
+  background-color: #a0a0a0;
+}
+
+.custom-scrollbar-modal::-webkit-scrollbar-track {
+  background-color: transparent;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+
+
 .no-scroll {
   overflow: hidden !important;
 }
